--- a/assets/src/scss/component/listing-details/_details-content.scss
+++ b/assets/src/scss/component/listing-details/_details-content.scss
@@ -346,6 +346,7 @@
   transition: 0.2s background-color ease-in-out;
   &:hover{
     background-color: var(--directorist-color-white) !important;
+    border-color: var(--directorist-color-primary) !important;
   }
   @media screen and (max-width: 575px) {
     gap: 0;
