--- a/blocks/src/account-button/4.plugins/_authentication.scss
+++ b/blocks/src/account-button/4.plugins/_authentication.scss
@@ -132,7 +132,9 @@
         }
 
         .directorist-account-block-close {
-            display: inline-block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 34px;
             height: 34px;
             border-radius: 50%;
